k2s/test/e2e/addons/ingress/nginx-gw/workloads/kustomization.yaml
# SPDX-FileCopyrightText: © 2026 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
resources:
  - nginx-gw-test-namespace.yaml
  - nginx-gw-test-linux-albums.yaml
